src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'float'", "'for'", "'function'", "'if'", "'integer'", 
                     "'return'", "'string'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'main'", 
                     "<INVALID>", "'false'", "'true'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "':'", "';'", "'.'", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "'='", "'\"'", "'_'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'" ]

    symbolicNames = [ "<INVALID>", "COMMENT_C", "COMMENT_CPP", "STR", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FLOAT", "FOR", 
                      "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", "WHILE", 
                      "VOID", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "MAIN", "BOOL", "FALSE", "TRUE", "FLO", "INT", "ID", 
                      "COMA", "COL", "SEM", "DOT", "LSB", "RSB", "LB", "RB", 
                      "LCB", "RCB", "EQU", "DB", "UNDE", "PLUS", "MINU", 
                      "MUTI", "DIVI", "MODU", "NOT", "AND", "OR", "EQUL", 
                      "NEQ", "LESS", "LOEQ", "GREA", "GOEQ", "SCOPE", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_arr = 1
    RULE_vartype = 2
    RULE_atomictype = 3
    RULE_arithmetricop = 4
    RULE_booleanop = 5
    RULE_stringop = 6
    RULE_relationalop = 7
    RULE_dimension = 8
    RULE_operator = 9
    RULE_operand = 10
    RULE_subexpression = 11
    RULE_expression = 12
    RULE_expression_relat = 13
    RULE_expression_logic = 14
    RULE_expression_bina1 = 15
    RULE_expression_bina2 = 16
    RULE_expression_unary = 17
    RULE_constant = 18
    RULE_functioncall = 19
    RULE_indexexpression = 20
    RULE_parameter = 21
    RULE_indexop = 22
    RULE_arguement = 23
    RULE_functionmainprot = 24
    RULE_functionprot = 25
    RULE_functionbody = 26
    RULE_scalarvar = 27
    RULE_lhs = 28
    RULE_statement = 29
    RULE_assignstatement = 30
    RULE_ifstatement = 31
    RULE_forhead = 32
    RULE_forstatement = 33
    RULE_whilecondition = 34
    RULE_whilestatement = 35
    RULE_dowhilestatement = 36
    RULE_breakstatement = 37
    RULE_continuestatement = 38
    RULE_returnstatement = 39
    RULE_callstatement = 40
    RULE_blockstatement = 41
    RULE_idlist = 42
    RULE_expressionlist = 43
    RULE_parameterlist = 44
    RULE_arguementlist = 45
    RULE_statementlist = 46
    RULE_variabledecl = 47
    RULE_variabledeclassign = 48
    RULE_variabledecls = 49
    RULE_functiondecl = 50
    RULE_mainfunction = 51
    RULE_arraytype = 52
    RULE_decls = 53
    RULE_decl = 54

    ruleNames =  [ "program", "arr", "vartype", "atomictype", "arithmetricop", 
                   "booleanop", "stringop", "relationalop", "dimension", 
                   "operator", "operand", "subexpression", "expression", 
                   "expression_relat", "expression_logic", "expression_bina1", 
                   "expression_bina2", "expression_unary", "constant", "functioncall", 
                   "indexexpression", "parameter", "indexop", "arguement", 
                   "functionmainprot", "functionprot", "functionbody", "scalarvar", 
                   "lhs", "statement", "assignstatement", "ifstatement", 
                   "forhead", "forstatement", "whilecondition", "whilestatement", 
                   "dowhilestatement", "breakstatement", "continuestatement", 
                   "returnstatement", "callstatement", "blockstatement", 
                   "idlist", "expressionlist", "parameterlist", "arguementlist", 
                   "statementlist", "variabledecl", "variabledeclassign", 
                   "variabledecls", "functiondecl", "mainfunction", "arraytype", 
                   "decls", "decl" ]

    EOF = Token.EOF
    COMMENT_C=1
    COMMENT_CPP=2
    STR=3
    AUTO=4
    BREAK=5
    BOOLEAN=6
    DO=7
    ELSE=8
    FLOAT=9
    FOR=10
    FUNCTION=11
    IF=12
    INTEGER=13
    RETURN=14
    STRING=15
    WHILE=16
    VOID=17
    OUT=18
    CONTINUE=19
    OF=20
    INHERIT=21
    ARRAY=22
    MAIN=23
    BOOL=24
    FALSE=25
    TRUE=26
    FLO=27
    INT=28
    ID=29
    COMA=30
    COL=31
    SEM=32
    DOT=33
    LSB=34
    RSB=35
    LB=36
    RB=37
    LCB=38
    RCB=39
    EQU=40
    DB=41
    UNDE=42
    PLUS=43
    MINU=44
    MUTI=45
    DIVI=46
    MODU=47
    NOT=48
    AND=49
    OR=50
    EQUL=51
    NEQ=52
    LESS=53
    LOEQ=54
    GREA=55
    GOEQ=56
    SCOPE=57
    WS=58
    ERROR_CHAR=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.decls()
            self.state = 111
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def expressionlist(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr" ):
                return visitor.visitArr(self)
            else:
                return visitor.visitChildren(self)




    def arr(self):

        localctx = MT22Parser.ArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MT22Parser.LCB)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.STR) | (1 << MT22Parser.BOOL) | (1 << MT22Parser.FLO) | (1 << MT22Parser.INT) | (1 << MT22Parser.ID) | (1 << MT22Parser.LB) | (1 << MT22Parser.LCB) | (1 << MT22Parser.MINU) | (1 << MT22Parser.NOT))) != 0):
                self.state = 114
                self.expressionlist()


            self.state = 117
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomictype(self):
            return self.getTypedRuleContext(MT22Parser.AtomictypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = MT22Parser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vartype)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.atomictype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomictypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomictype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomictype" ):
                return visitor.visitAtomictype(self)
            else:
                return visitor.visitChildren(self)




    def atomictype(self):

        localctx = MT22Parser.AtomictypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atomictype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmetricopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINU(self):
            return self.getToken(MT22Parser.MINU, 0)

        def PLUS(self):
            return self.getToken(MT22Parser.PLUS, 0)

        def MUTI(self):
            return self.getToken(MT22Parser.MUTI, 0)

        def DIVI(self):
            return self.getToken(MT22Parser.DIVI, 0)

        def MODU(self):
            return self.getToken(MT22Parser.MODU, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arithmetricop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetricop" ):
                return visitor.visitArithmetricop(self)
            else:
                return visitor.visitChildren(self)




    def arithmetricop(self):

        localctx = MT22Parser.ArithmetricopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arithmetricop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.PLUS) | (1 << MT22Parser.MINU) | (1 << MT22Parser.MUTI) | (1 << MT22Parser.DIVI) | (1 << MT22Parser.MODU))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(MT22Parser.NOT, 0)

        def AND(self):
            return self.getToken(MT22Parser.AND, 0)

        def OR(self):
            return self.getToken(MT22Parser.OR, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_booleanop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanop" ):
                return visitor.visitBooleanop(self)
            else:
                return visitor.visitChildren(self)




    def booleanop(self):

        localctx = MT22Parser.BooleanopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_booleanop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.NOT) | (1 << MT22Parser.AND) | (1 << MT22Parser.OR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCOPE(self):
            return self.getToken(MT22Parser.SCOPE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_stringop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringop" ):
                return visitor.visitStringop(self)
            else:
                return visitor.visitChildren(self)




    def stringop(self):

        localctx = MT22Parser.StringopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stringop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(MT22Parser.SCOPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUL(self):
            return self.getToken(MT22Parser.EQUL, 0)

        def NEQ(self):
            return self.getToken(MT22Parser.NEQ, 0)

        def LESS(self):
            return self.getToken(MT22Parser.LESS, 0)

        def GREA(self):
            return self.getToken(MT22Parser.GREA, 0)

        def LOEQ(self):
            return self.getToken(MT22Parser.LOEQ, 0)

        def GOEQ(self):
            return self.getToken(MT22Parser.GOEQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_relationalop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalop" ):
                return visitor.visitRelationalop(self)
            else:
                return visitor.visitChildren(self)




    def relationalop(self):

        localctx = MT22Parser.RelationalopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_relationalop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.EQUL) | (1 << MT22Parser.NEQ) | (1 << MT22Parser.LESS) | (1 << MT22Parser.LOEQ) | (1 << MT22Parser.GREA) | (1 << MT22Parser.GOEQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def COMA(self):
            return self.getToken(MT22Parser.COMA, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dimension)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.INT)
                self.state = 134
                self.match(MT22Parser.COMA)
                self.state = 135
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(MT22Parser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetricop(self):
            return self.getTypedRuleContext(MT22Parser.ArithmetricopContext,0)


        def booleanop(self):
            return self.getTypedRuleContext(MT22Parser.BooleanopContext,0)


        def stringop(self):
            return self.getTypedRuleContext(MT22Parser.StringopContext,0)


        def relationalop(self):
            return self.getTypedRuleContext(MT22Parser.RelationalopContext,0)


        def indexexpression(self):
            return self.getTypedRuleContext(MT22Parser.IndexexpressionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_operator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = MT22Parser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operator)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.PLUS, MT22Parser.MINU, MT22Parser.MUTI, MT22Parser.DIVI, MT22Parser.MODU]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.arithmetricop()
                pass
            elif token in [MT22Parser.NOT, MT22Parser.AND, MT22Parser.OR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.booleanop()
                pass
            elif token in [MT22Parser.SCOPE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.stringop()
                pass
            elif token in [MT22Parser.EQUL, MT22Parser.NEQ, MT22Parser.LESS, MT22Parser.LOEQ, MT22Parser.GREA, MT22Parser.GOEQ]:
                self.enterOuterAlt(localctx, 4)
                self.state = 142
                self.relationalop()
                pass
            elif token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 5)
                self.state = 143
                self.indexexpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(MT22Parser.ConstantContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(MT22Parser.FunctioncallContext,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def subexpression(self):
            return self.getTypedRuleContext(MT22Parser.SubexpressionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_operand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperand" ):
                return visitor.visitOperand(self)
            else:
                return visitor.visitChildren(self)




    def operand(self):

        localctx = MT22Parser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_operand)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.constant()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.functioncall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.match(MT22Parser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.subexpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubexpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_subexpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubexpression" ):
                return visitor.visitSubexpression(self)
            else:
                return visitor.visitChildren(self)




    def subexpression(self):

        localctx = MT22Parser.SubexpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_subexpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(MT22Parser.LB)
            self.state = 153
            self.expression()
            self.state = 154
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_relat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Expression_relatContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Expression_relatContext,i)


        def stringop(self):
            return self.getTypedRuleContext(MT22Parser.StringopContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = MT22Parser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.expression_relat()
                self.state = 157
                self.stringop()
                self.state = 158
                self.expression_relat()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.expression_relat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_relatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_logic(self, i:int=None):
